--- a/ECommerceWithAuth.MVC/Views/Order/Index.cshtml
+++ b/ECommerceWithAuth.MVC/Views/Order/Index.cshtml
@@ -124,9 +124,7 @@ else
     <div class="modal-dialog  modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title text-primary m-auto text-center" id="distanceModalLabel">
-                    
-                </h4>
+                <h4 class="modal-title text-primary m-auto text-center" id="distanceModalLabel"></h4>
             </div>
             <div class="modal-body mt-2 m-2 p-2" style="max-height:16vh;">
                 <div class="container-fluid">
