Working on more beautiful layouts.

--- a/ECommerceWithAuth.MVC/Views/Order/OrderItems.cshtml
+++ b/ECommerceWithAuth.MVC/Views/Order/OrderItems.cshtml
@@ -3,8 +3,8 @@
 @{
     ViewData["Title"] = "Order Items";
 }
-<div class="container-md col-md-10 col-xl-8 overflow-auto">
 
+<div class="container-md col-md-10 col-xl-8 overflow-auto mt-5 pt-5">
     <div class="row pt-3 mb-3 gy-4">
         <h5 class="text-dark font-monospace fw-bold col text-center">
             Order-Id
@@ -13,7 +13,7 @@
         <div class="text-start pt-3 pe-3">
             <h5>
                 Order placed:
-                <span class="font-monospace text-primary">@Model.OrderPlaced</span>
+                <span class="font-monospace fw-bold text-primary">@Model.OrderPlaced</span>
             </h5>
         </div>
         <div class="text-end pe-5 me-5">
