--- a/ECommerceWithAuth.MVC/wwwroot/css/site.css
+++ b/ECommerceWithAuth.MVC/wwwroot/css/site.css
@@ -16,3 +16,12 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+.e-commerce {
+    background: url('../Resources/Images/e-commerce-mvc.jpg') no-repeat ;
+    background-size: cover;
+    height: 80vh;
+    top:50px;
+    position: relative;
+
+}
