--- a/ECommerceWithAuth.MVC/Views/Home/Index.cshtml
+++ b/ECommerceWithAuth.MVC/Views/Home/Index.cshtml
@@ -3,9 +3,9 @@
     ViewData["Title"] = "Home Page";
 }
 
+<div class="text-center e-commerce">
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about building Web apps with ASP.NET Core.</p>    
+    <h2 class="display-4">Welcome to Happy Valley Online Grocery</h2>
+     
 </div>
 
