Re-implemented Auth & improved layouts

--- a/ECommerceWithAuth.MVC/Views/Home/Index.cshtml
+++ b/ECommerceWithAuth.MVC/Views/Home/Index.cshtml
@@ -1,11 +1,13 @@
 ﻿
 @{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Home";
 }
 
 <div class="text-center e-commerce">
 
-    <h2 class="display-4">Welcome to Happy Valley Online Grocery</h2>
+    <h2 class="display-4" style="color:rgb(17, 60, 29);">
+        Welcome to Happy Valley Online Grocery
+    </h2>
      
 </div>
 
