--- a/ECommerceWithAuth.MVC/Views/Product/Index.cshtml
+++ b/ECommerceWithAuth.MVC/Views/Product/Index.cshtml
@@ -211,7 +211,7 @@ else
             </div>
             <div class="modal-footer border-top-0 row justify-content-evenly">
                 <button type="submit" onclick="patchDiscountRate()" id="patch" class="btn btn-warning col-auto ">Patch Discount</button>
-                <button type="button" class="btn btn-secondary col-auto " data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-secondary col-auto " data-bs-dismiss="modal">Cancel</button>
             </div>
         </div>
     </div>
@@ -232,7 +232,7 @@ else
 
                         <input class="d-none" id="productId-dateModal" type="text" asp-for="@productToPatch.Id" disabled />
 
-                        <div class="col-auto mb-3  pb-4 m-auto">
+                        <div class="col-auto mb-3 pb-4 m-auto">
                             <h5 class="text-center fw-bold text-primary" id="productName-dateModal" asp-for="@productToPatch.Name"></h5>
                         </div>
 
@@ -256,7 +256,7 @@ else
             </div>
             <div class="modal-footer border-top-0 row justify-content-evenly">
                 <button type="submit" onclick="patchDiscountDate()" id="patch" class="btn btn-warning col-auto ">Patch Date</button>
-                <button type="button" class="btn btn-secondary col-auto " data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-secondary col-auto " data-bs-dismiss="modal">Cancel</button>
             </div>
         </div>
     </div>
