--- a/ECommerceWithAuth.MVC/Views/_ViewImports.cshtml
+++ b/ECommerceWithAuth.MVC/Views/_ViewImports.cshtml
@@ -1,5 +1,7 @@
 ﻿@using ECommerceWithAuth.MVC
 @using ECommerceWithAuth.MVC.Models
 @using DataAccessLibrary.Services.RefitClient;
+@using ECommerceWithAuth.MVC.Views.Shared.Components
+@using ECommerceWithAuth.MVC.Views
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
