--- a/ECommerceWithAuth.MVC/Areas/Identity/Pages/Account/Login.cshtml
+++ b/ECommerceWithAuth.MVC/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,10 +5,10 @@
     ViewData["Title"] = "Log in";
 }
 
-<div class="row justify-content-center m-3 ">
+<div class="row justify-content-center m-5 pt-5 gy-5">
     <div class="col col-sm-9 col-md-7 col-lg-5 ">
         
-            <form id="account" method="post" >
+            <form id="account" method="post" class="m-3 pt-3">
                 <h3 class="text-center">Log in</h3>
                 <hr  style="max-width: 70%; margin: auto; color:rgb(0, 79, 23); height:2px;" class="mb-3 mt-3"  />
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
