--- a/ECommerceWithAuth.MVC/Views/Order/Index.cshtml
+++ b/ECommerceWithAuth.MVC/Views/Order/Index.cshtml
@@ -10,7 +10,7 @@
 }
 <span id="apiLocation" class="d-none">@Configuration["ApiLocation"]</span>
 
-<div class="row pt-5 gy-5">
+<div class="row pt-5 p-3 gy-5 me-0">
     <h3 class="text-secondary font-monospace fw-bold col-6">
         Orders
         [<span class="text-primary opacity-75 small">@Model.orders?.Count</span>]
@@ -37,7 +37,7 @@
 }
 else
 {
-    <div class="container-fluid overflow-auto mt-4 mb-4 pt-3 p-1 pb-3">
+    <div class="container-fluid overflow-auto mt-4 mb-4 p-3">
         <table class="table table-bordered table-striped text-center align-middle ">
             <thead class="border-dark bg-success text-light">
                 <tr>
