--- a/ECommerceWithAuth.MVC/Views/Product/Index.cshtml
+++ b/ECommerceWithAuth.MVC/Views/Product/Index.cshtml
@@ -10,7 +10,7 @@
     }
 </style>
 
-<div class="row pt-5 gy-5">
+<div class="row pt-5 pe-3 ps-3 gy-5 me-0">
     <h3 class="text-secondary font-monospace fw-bold col-6">
         Products [<span class="text-primary opacity-75 small">@Model.products?.Count</span>]
     </h3>
@@ -28,8 +28,8 @@
             <option value="DKK">DKK</option>
         </select>
     </div>
-    <div class="text-end">
-        <a asp-action="AddProduct" class="btn btn-success me-2 mb-4 fw-bold">Add Product</a>
+    <div class="text-end mb-4 pe-2 pb-3">
+        <a asp-action="AddProduct" class="btn btn-success  fw-bold">Add Product</a>
     </div>
 </div>
 
@@ -39,7 +39,7 @@
 }
 else
 {
-    <div class="container-fluid overflow-auto mb-3 m-0 pe-1 ps-1 pb-3">
+    <div class="container-fluid overflow-auto mb-3 m-0 pe-3 ps-3 pb-3">
         <table class="table table-bordered table-striped text-center align-middle ">
             <thead class="border-dark bg-success text-light">
                 <tr>
