--- a/ECommerceWithAuth.MVC/Views/Shared/Components/StatisticsComponent.razor
+++ b/ECommerceWithAuth.MVC/Views/Shared/Components/StatisticsComponent.razor
@@ -17,7 +17,7 @@
 
 <div class="vertical-center">
     <div class="container mt-3">
-        <div class="row justify-content-center fw-bold gx-5">
+        <div class="row justify-content-center fw-bold gx-5 m-0">
 
             <div class="row justify-content-between d-flex border border-2 shadow
                  border-dark col-md-10 col-lg-7 p-3 list-group-item mt-3 mb-3">
