--- a/ECommerceWithAuth.MVC/Views/Shared/Components/_Imports.razor
+++ b/ECommerceWithAuth.MVC/Views/Shared/Components/_Imports.razor
@@ -1,8 +1,9 @@
-﻿@using System.Net.Http
+﻿@using System.IO
+@using System.Net.Http
+@using Microsoft.JSInterop
 @using Microsoft.AspNetCore.Authorization
-@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Components.Web
+@using Microsoft.AspNetCore.SignalR.Client
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
-@using Microsoft.AspNetCore.Components.Web
-@using Microsoft.JSInterop
-@using System.IO
+@using Microsoft.AspNetCore.Components.Authorization
