--- a/ECommerceWithAuth.MVC/Views/Shared/_Layout.cshtml
+++ b/ECommerceWithAuth.MVC/Views/Shared/_Layout.cshtml
@@ -26,7 +26,6 @@
                             <li class="nav-item">
                                 <a class="nav-link navbar-brand text-white" asp-controller="Product" asp-action="Index">Products</a>
                             </li>
-
                             <li class="nav-item">
                                 <a class="nav-link navbar-brand text-white" asp-controller="Order" asp-action="Index">Orders</a>
                             </li>
@@ -35,6 +34,8 @@
                             </li>
                         }
                     </ul>
+
+                    @*<span class="text-white"><partial name="_Cart" /></span>*@
                     <span class="text-white"><partial name="_LoginPartial" /></span>
 
                 </div>
