--- a/ECommerceWithAuth.MVC/Views/Statistics/Index.cshtml
+++ b/ECommerceWithAuth.MVC/Views/Statistics/Index.cshtml
@@ -4,6 +4,6 @@
 
 <div>
     @(await Html.RenderComponentAsync<ECommerceWithAuth.MVC.Views.Shared.Components.
-    StatisticsComponent>(RenderMode.ServerPrerendered/*,new {  Data= " Hello World " }*/))
+    StatisticsComponent>(RenderMode.ServerPrerendered))
 </div>
 
