--- a/ECommerceWithAuth.MVC/Views/Shared/_LoginPartial.cshtml
+++ b/ECommerceWithAuth.MVC/Views/Shared/_LoginPartial.cshtml
@@ -7,23 +7,23 @@
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
-        <a id="manage" class="nav-link text-white" asp-area="Identity" asp-page="/Account/Manage/Index"
-           title="Manage">@UserManager.GetUserName(User)</a>
+        <a id="manage" class="nav-link text-white  " asp-area="Identity" asp-page="/Account/Manage/Index"
+           title="Manage">@UserManager.GetUserName(User) &nbsp;| </a>
     </li>
     <li class="nav-item">
         <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout"
               asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button id="logout" type="submit" class="nav-link btn btn-link text-white">Logout</button>
+                <button id="logout" type="submit" class="nav-link btn btn-link text-white  ">Logout <span class="oi oi-account-logout fw-bold"></span></button>
         </form>
     </li>
 }
 else
 {
     <li class="nav-item">
-        <a class="nav-link text-white" id="register" asp-area="Identity" asp-page="/Account/Register">Register</a>
+        <a class="nav-link text-white" id="register" asp-area="Identity" asp-page="/Account/Register">Register &nbsp;&nbsp;|</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link text-white" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
+        <a class="nav-link text-white" id="login" asp-area="Identity" asp-page="/Account/Login">Login <span class="oi oi-account-login fw-bold"></span></a>
     </li>
 }
 </ul>
